# hive-entropy-api

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  installation.md
doc/documentation/: api_reference.rst
doc/references/: api_reference.rst
doc/references/computation/: column.rst  computation.rst  matrix.rst  row.rst
doc/references/distribution/: distribution.rst  distributor.rst
doc/references/network/: block.rst  coap_endpoint.rst  hive_entropy_node.rst  message.rst  network.rst  peer.rst  response_builder.rst
doc/references/utility/: global_context.rst  hardware.rst  serializer.rst  utility.rst
examples/: CMakeLists.txt
examples/boomerang/: CMakeLists.txt  main.cpp
examples/demonstration/: CMakeLists.txt  demo.cpp
examples/rowcol/: CMakeLists.txt  main.cpp
heapi/: CMakeLists.txt
heapi/cmake/: HiveEntropyAPIConfig.cmake.in
heapi/include/: Block.h  CoapEndpoint.h  Column.h  DataSplitter.h  Distributor.h  GlobalContext.h  Hardware.h  HiveEntropyNode.h  HiveEntropyNodeInterface.h  IncompatibleDimensionsException.h  Matrix.h  Message.h  MessageHandler.h  OutOfBoundException.h  Peer.h  ResponseBuilder.h  Row.h  Serializer.h  full.h  hardware.h
heapi/src/: Block.cpp  CoapEndpoint.cpp  DataSplitter.cpp  Distributor.cpp  Hardware.cpp  HiveEntropyNode.cpp  HiveEntropyNodeInterface.cpp  IncompatibleDimensionsException.cpp  Matrix.cpp  Message.cpp  MessageHandler.cpp  OutOfBoundException.cpp  Peer.cpp  ResponseBuilder.cpp  Serializer.cpp  what.cpp
include/: Matrix.h
lib/: README.md
src/: Matrix.cpp  Server.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
tests/src/: benchmark.cpp  coap_endpoint_tests.cpp  matrix_tests.cpp  message_tests.cpp  serializer_tests.cpp  tests.cpp
